--- a/tests/RxDBDotNet.Tests/RxDBDotNet.Tests.csproj
+++ b/tests/RxDBDotNet.Tests/RxDBDotNet.Tests.csproj
@@ -27,6 +27,8 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="GraphQL.Client" Version="6.1.0" />
+        <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.1.0" />
         <PackageReference Include="GraphQlClientGenerator" Version="0.9.21" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.7" />
         <PackageReference Include="coverlet.collector" Version="6.0.2">
